# Rest2Ros

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Receiver.py  Sender.py  Server_Receiver.py  Server_Sender.py  clientHandShake.py  createDM.sh  entrypoint.sh  follower_opencv.py  howto.txt  http_test.py  image_master.py  ip-thesis.txt  master.py  message.proto  message_pb2.py  movement.proto  movement_master.py  movement_pb2.py  package.xml  pom.xml  preliminary.sh  pytest.py  rest_python.py  runDM.sh  serverHandShake.py  setup.py  testing_getImage.py  ugot.sh  ugotrest.sh
config/: communication_manager_params.yaml
launch/: communication_manager.launch
nodes/: communication_manager.py
src/: Publisher.py  Request_Handler.py  communication_manager.py
src/main/java/se/got/: App.java  Client.java  Co4robotsGUI.java  Composition.java  CoreMovementPatterns.java  MissionSender.java  PATTERNS.java
src/main/java/se/got/engine/: PSPController.java
src/main/java/se/got/gui/dialogs/: EditEventDialog.java  IntervalTimeBoundDialog.java  NewEventDialog.java  ProbabilityBoundDialog.java  TimeBoundDialog.java  UpperTimeBoundDialog.java
src/main/java/se/got/gui/panels/: EventUsage.java  PanelFeatures.java  PatternEditor.java  (+1 more)
src/main/java/se/got/ltl/: LTLFormula.java
src/main/java/se/got/mappings/: GenericMapper.java  LTLMapper.java  MTLMapper.java  MTLSupport.java  PSPFrameworkSupport.java  PatternMapper.java  PrismMapper.java  PrismSupport.java  QuantitativePrismMapper.java  SELMapper.java
src/test/java/se/got/: AppTest.java
src/ugot/: Request_Handler.py
(+68 files in other folders)
